# YVOSS

./: CMakeLists.txt  LICENSE  config.json  main.cc
.devcontainer/: Dockerfile  devcontainer.json
backend/: CMakeLists.txt  config.json  main.cc
backend/test/: CMakeLists.txt
frontend/: CMakeLists.txt  main.cpp
frontend/lib/HtmlClass/: htmlTag.hpp
lib/: CMakeLists.txt
lib/HtmlClass/: CMakeLists.txt
lib/HtmlClass/include/: htmlPage.hpp  htmlTag.hpp  htmlVal.hpp  html_class.hpp  jsValue.hpp
lib/HtmlClass/include/jsValueTypes/: double.hpp  int.hpp  string.hpp
lib/HtmlClass/src/: htmlPage.cc  htmlTag.cc  htmlVal.cc  html_class.cc  jsValue.cc
test/: CMakeLists.txt
